--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@splinetool/react-spline": "^4.1.0",
     "framer-motion": "^11.18.2",
     "framer-motion-3d": "^11.18.2",
     "lucide-react": "^0.554.0",
